--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                      <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot 2025-09-12 181342-1.png" alt="">
+                                <img src="images/Screenshot 2025-09-12 181342-1.png" alt="" data-project-url="https://bookstore-02025.netlify.app/">
                             </div>
                         </div>
                      </div>
@@ -322,7 +322,7 @@
                      <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot 2025-09-12 181445-2.png" alt="">
+                                <img src="images/Screenshot 2025-09-12 181445-2.png" alt="" data-project-url="https://amazon-boba-a0a0ca.netlify.app/">
                             </div>
                         </div>
                      </div>
@@ -331,7 +331,7 @@
                      <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot 2025-09-12 181808-4.png" alt="">
+                                <img src="images/Screenshot 2025-09-12 181808-4.png" alt="" data-project-url="https://aple-elf-d4f835.netlify.app/">
                             </div>
                         </div>
                      </div>
