--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                     <h3 class="hello">Hello, my name is <span class="name">Sejal Kailas Aware</span></h3>
                     <h3 class="my-profession">I'm a <span class="typing">Web devloper</span></h3>
                     <p>I'm a web devloper with 0 experience, my experties is to create and design websites...</p>
-                    <a href="#contact" class="btn">Download Resume</a>
+                    <button class="btn" onclick="downloadResume()">Download Resume</button>
+                    <a id="download-link" href="Resume.pdf" class="btn" download="Sejal's_Resume.pdf" style="display: none;">Download Resume</a>
+
                 </div>
                 <div class="home-img padd-15">
                     <img src="images/me.jpg" alt="">
