--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <p>Age: <span>22</span></p>
                             </div>
                             <div class="info-item padd-15">
-                                <p>Website: <span>www.domain.com</span></p>
+                                <p>GitHub: <span>https://github.com/sejal2063/</span></p>
                             </div>
                             <div class="info-item padd-15">
                                 <p>Email: <span>sejalaware2063@gmail.com</span></p>
@@ -151,32 +151,40 @@
                                     <h3 class="timeline-date">
                                         <i class="fa fa-calendar"></i> 2021 - 2025
                                     </h3>
-                                    <h4 class="timeline-title">Batchelor in Computer Science</h4>
-                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem consequatur accusamus porro necessitatibus nam dolorum, sapiente magnam officiis reprehenderit culpa cumque voluptatem rerum delectus maiores!</p>
+                                    <h4 class="timeline-title">Batchelor in Computer Science BSC(CS)</h4>
+                                    <p class="timeline-text">College: CMCS College Nashik . 
+                                        <br>
+                                        CGPA: 7.84
+                                    </p>
                                   </div>
                                  <!-- Timeline item -->
                                   <div class="timeline-item">
                                     <div class="circle-dot"></div>
                                     <h3 class="timeline-date">
-                                        <i class="fa fa-calendar"></i> 2025 - 2026
+                                        <i class="fa fa-calendar"></i> 2019 - 2021
                                     </h3>
-                                    <h4 class="timeline-title">Batchelor in Computer Science</h4>
-                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem consequatur accusamus porro necessitatibus nam dolorum, sapiente magnam officiis reprehenderit culpa cumque voluptatem rerum delectus maiores!</p>
+                                    <h4 class="timeline-title">Higher Secondary Certificate (Science)</h4>
+                                    <p class="timeline-text">College: Janata English School & Junior College Saikheda .
+                                        <br>
+                                        Percentage: 79.33 %</p>
                                   </div>
                                  <!-- Timeline item -->
                                   <div class="timeline-item">
                                     <div class="circle-dot"></div>
                                     <h3 class="timeline-date">
-                                        <i class="fa fa-calendar"></i> 2025 - 2026
+                                        <i class="fa fa-calendar"></i> 2019
                                     </h3>
-                                    <h4 class="timeline-title">Batchelor in Computer Science</h4>
-                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem consequatur accusamus porro necessitatibus nam dolorum, sapiente magnam officiis reprehenderit culpa cumque voluptatem rerum delectus maiores!</p>
+                                    <h4 class="timeline-title">Secondary School Certificate</h4>
+                                    <p class="timeline-text">School: Godavari Madhyamik Vidyalay Shingave .
+                                        <br>
+                                        Percentage: 82.40 %
+                                    </p>
                                   </div>
-                                </div>
+                                </div> 
                             </div>
                         </div>
                     </div>
-                    <div class="experience padd-15">
+                    <div class="experience padd-15" hidden>
                         <h3 class="title">Experience</h3>
                         <div class="row">
                             <div class="timeline-box padd-15">
