--- a/index.html
+++ b/index.html
@@ -72,9 +72,17 @@
                     <div class="row"> 
                         <div class="about-text padd-15">
                             <h3>I'm Sejal Aware and <span>Web Devloper</span></h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque aperiam beatae in delectus, dolor velit at nesciunt excepturi tempora facere iusto quod alias ex, explicabo mollitia quibusdam amet id illo corrupti aspernatur facilis modi harum perferendis! Dolorem repudiandae quos ratione laboriosam voluptate fuga corporis omnis voluptatum unde temporibus! Ipsam natus id itaque cupiditate, asperiores dolores?</p>
-                        </div>
-                    </div>
+                            <p>I am a highly motivated <b> B.Sc. Computer Science </b> graduate specializing in <b> Full Stack Java Development.</b> I am seeking challenging roles in<b> Web Development and Software Development Engineering (SDE) </b> where I can apply my comprehensive skills.
+
+                            My expertise allows me to contribute across the entire application stack, delivering high-quality, full-featured applications:
+
+                            Backend & SDE Focus: <b>Proficient in Java and building robust backend services. </b> I have extensive experience with MySQL for relational database management, ensuring data integrity for applications like my E-commerce and Book Store clones.
+
+                            Frontend & Web Dev Focus: Highly skilled in modern web development using <b>ReactJS, HTML , CSS, JAVA, MYSQL</b>, creating dynamic, user-friendly interfaces and handling seamless API integration.
+
+                            I am eager to translate complex requirements into scalable and efficient code, and I am actively looking for an opportunity to contribute immediately to a product development team.</p>
+                            </div>
+                         </div>
                     <div class="row">
                         <div class="personal-info padd-15" >
                             <div class="row">
@@ -85,10 +93,7 @@
                                 <p>Age: <span>22</span></p>
                             </div>
                             <div class="info-item padd-15">
-                                <p>GitHub: <span>https://github.com/sejal2063/</span></p>
-                            </div>
-                            <div class="info-item padd-15">
-                                <p>Email: <span>sejalaware2063@gmail.com</span></p>
+                                <p>Email: <span><a href="mailto:sejalaware2063@gmail.com">sejalaware2063@gmail.com</a></span></p>
                             </div>
                             <div class="info-item padd-15">
                                 <p>Degree: <span>BSC(Computer Science)</span></p>
@@ -97,7 +102,13 @@
                                 <p>Phone: <span>+91 9049393958</span></p>
                             </div>
                             <div class="info-item padd-15">
-                                <p>City: <span>Pune</span></p>
+                                <p>Current Location: <span>Sadashiv peth, Pune</span></p>
+                            </div>
+                             <div class="info-item padd-15">
+                                <p>GitHub: <span><a href="https://github.com/sejal2063/" target="_blank">https://github.com/sejal2063/</a></span></p>
+                            </div>
+                             <div class="info-item padd-15">
+                                <p>LinkedIn: <span><a href="https://www.linkedin.com/in/sejal-aware-123456789/" target="_blank">https://www.linkedin.com/in/sejal-aware-123456789/</a></span></p>
                             </div>
                            </div>
                            <div class="row">
@@ -109,20 +120,6 @@
                         <div class="skills padd-15">
                             <div class="row">
                                 <div class="skill-item padd-15">
-                                    <h5>CSS</h5>
-                                    <div class="progress">
-                                        <div class="progress-in" style="width: 86%;"></div>
-                                        <div class="skill-percent">86%</div> 
-                                    </div>
-                                </div>
-                                <div class="skill-item padd-15">
-                                    <h5>PHP</h5>
-                                    <div class="progress">
-                                        <div class="progress-in" style="width: 66%;"></div>
-                                        <div class="skill-percent">66%</div> 
-                                    </div>
-                                </div>
-                                <div class="skill-item padd-15">
                                     <h5>HTML</h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 96%;"></div>
@@ -130,10 +127,46 @@
                                     </div>
                                 </div>
                                 <div class="skill-item padd-15">
+                                    <h5>JavaScript</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 87%;"></div>
+                                        <div class="skill-percent">87%</div> 
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
+                                    <h5>CSS</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 86%;"></div>
+                                        <div class="skill-percent">86%</div> 
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
+                                    <h5>Reactjs</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 84%;"></div>
+                                        <div class="skill-percent">84%</div> 
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
                                     <h5>Bootstrap</h5>
                                     <div class="progress">
                                         <div class="progress-in" style="width: 76%;"></div>
                                         <div class="skill-percent">76%</div> 
+                                    </div>
+                                </div>
+
+                                <div class="skill-item padd-15">
+                                    <h5>PHP</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 70%;"></div>
+                                        <div class="skill-percent">70%</div> 
+                                    </div>
+                                </div>
+                                <div class="skill-item padd-15">
+                                    <h5>DSA</h5>
+                                    <div class="progress">
+                                        <div class="progress-in" style="width: 60%;"></div>
+                                        <div class="skill-percent">60%</div> 
                                     </div>
                                 </div>
                             </div>
@@ -184,7 +217,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="experience padd-15" hidden>
+                    <div class="experience padd-15">
                         <h3 class="title">Experience</h3>
                         <div class="row">
                             <div class="timeline-box padd-15">
