--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                      <div class="portfolio-item padd-15">
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <img src="images/Screenshot 2025-09-12 181445-2.png" alt="" data-project-url="https://amazon-boba-a0a0ca.netlify.app/">
+                                <img src="images/Screenshot 2025-09-12 181445-2.png" alt="" data-project-url=" https://sejal2063.github.io/Amazon/">
                             </div>
                         </div>
                      </div>
