--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h3 class="my-profession">I'm a <span class="typing">Web devloper</span></h3>
                     <p>I'm a web devloper with 0 experience, my experties is to create and design websites...</p>
                     <button class="btn" onclick="downloadResume()">Download Resume</button>
-                    <a id="download-link" href="Resume.pdf" class="btn" download="Sejal's_Resume.pdf" style="display: none;">Download Resume</a>
+                    <a id="download-link" href="Sejal_Resume.pdf" class="btn" download="Sejal's_Resume.pdf" style="display: none;">Download Resume</a>
 
                 </div>
                 <div class="home-img padd-15">
