--- a/index.html
+++ b/index.html
@@ -379,6 +379,15 @@
                         </div>
                      </div>
                     <!-- ====== portfolio item End ====== -->
+                     <!-- ====== portfolio item start ====== --> 
+                     <div class="portfolio-item padd-15">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="images/Screenshot 2025-11-12 192807-5.png" alt="" data-project-url="https://cinemas-one.vercel.app/ ">
+                            </div>
+                        </div>
+                     </div>
+                    <!-- ====== portfolio item End ====== -->
                 </div>
             </div>   
         </section>
